--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="cyber security UK, penetration testing, ISO 27001, Cyber Essentials, vulnerability assessment, managed security services, Edinburgh cyber security">
     <title>Invara Digital | UK Cyber Security Solutions</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
