--- a/case-studies.html
+++ b/case-studies.html
@@ -8,6 +8,7 @@
         content="Case studies from Invara Digital - See how we've helped UK businesses improve their cyber security posture.">
     <title>Case Studies | Invara Digital</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
