--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,7 @@
         content="Cyber security resources, guides, and insights from Invara Digital - Helping UK businesses stay informed about the latest threats and compliance requirements.">
     <title>Resources | Invara Digital</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
