--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
         content="Cyber security services from Invara Digital - Penetration testing, Cyber Essentials, ISO 27001 consulting, and managed security services.">
     <title>Our Services | Invara Digital</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
