--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
                 <!-- Menu Icon (Visible by default) -->
-                <svg class="nav-icon menu-icon" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="3"
-                    stroke-linecap="round" stroke-linejoin="round">
+                <svg class="nav-icon menu-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="3" y1="12" x2="21" y2="12"></line>
                     <line x1="3" y1="6" x2="21" y2="6"></line>
                     <line x1="3" y1="18" x2="21" y2="18"></line>
                 </svg>
-                <!-- Close Icon (Hidden by default) -->
-                <svg class="nav-icon close-icon hidden" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="3"
-                    stroke-linecap="round" stroke-linejoin="round">
+                <svg class="nav-icon close-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="18" y1="6" x2="6" y2="18"></line>
                     <line x1="6" y1="6" x2="18" y2="18"></line>
                 </svg>
-            </button>
+                </button>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li class="dropdown">
