--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
     <section class="page-header">
         <div class="container">
             <span class="section-tag">About Us</span>
-            <h1>UK Cyber Security Excellence</h1>
-            <p>Founded in Edinburgh, protecting businesses across the United Kingdom</p>
+            <h1>Cyber Security Excellence</h1>
+            <p>Founded in Edinburgh, protecting your businesses</p>
         </div>
     </section>
 
@@ -70,7 +70,7 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h2>Our Story</h2>
-                    <p>Invara Digital was founded in 2019 by a team of former Big Four security consultants who
+                    <p>Invara Digital was founded  by a team of former Big Four security consultants who
                         recognised that UK SMEs and mid-market companies were underserved by the cyber security
                         industry. Too often, these businesses were forced to choose between expensive enterprise
                         solutions or inadequate consumer-grade protection.</p>
@@ -82,10 +82,10 @@
                         compliance with UK and international regulations.</p>
                 </div>
                 <div class="about-stats">
-                    <div class="stat-box">
+                    <!-- <div class="stat-box">
                         <span class="stat-number">2026</span>
                         <span class="stat-label">Year Founded</span>
-                    </div>
+                    </div> -->
                     <div class="stat-box">
                         <span class="stat-number">25+</span>
                         <span class="stat-label">Security Experts</span>
@@ -173,7 +173,7 @@
     </section> -->
 
     <!-- Certifications -->
-    <section class="certifications">
+    <!-- <section class="certifications">
         <div class="container">
             <div class="section-header">
                 <span class="section-tag">Accreditations</span>
@@ -206,7 +206,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -219,7 +219,7 @@
                     </a>
                     <p class="footer-tagline">Enterprise-grade cyber security for UK businesses.</p>
                     <div class="footer-address">
-                        <strong>Headquarters</strong>
+                        <strong>Address</strong>
                         <address>
                             5 South Charlotte Street<br>
                             Edinburgh, EH2 4AN<br>
