--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="badge-dot"></span>
-                UK-Based Cyber Security Experts
+                 Cyber Security Experts
             </div>
             <h1 class="hero-title">
-                <span class="title-line">Protecting UK Businesses</span>
+                <span class="title-line">Protecting your Businesses</span>
                 <span class="title-line">from Advanced Cyber Threats</span>
             </h1>
             <p class="hero-subtitle">
                 Enterprise-grade cyber security solutions built for compliance, resilience, and long-term protection.
-                Trusted by UK SMEs, fintechs, and mid-sized enterprises.
+                Trusted by SMEs, fintechs, and mid-sized enterprises.
             </p>
             <div class="hero-cta">
                 <a href="contact.html" class="btn btn-primary btn-ripple">
@@ -91,7 +91,7 @@
             <div class="hero-stats">
                 <div class="stat-item">
                     <span class="stat-number" data-target="500">0</span>+
-                    <span class="stat-label">UK Businesses Protected</span>
+                    <span class="stat-label">Businesses Protected</span>
                 </div>
                 <div class="stat-divider"></div>
                 <div class="stat-item">
@@ -192,7 +192,7 @@
                     <p>Round-the-clock security operations centre ensuring continuous threat detection and rapid
                         response.</p>
                 </div>
-                <div class="feature-item">
+                <!-- <div class="feature-item">
                     <div class="feature-icon">
                         <svg viewBox="0 0 48 48" fill="none" stroke="currentColor" stroke-width="1.5">
                             <path d="M24 4L6 12v12c0 11.1 7.7 21.5 18 24 10.3-2.5 18-12.9 18-24V12L24 4z" />
@@ -200,7 +200,7 @@
                     </div>
                     <h3>100% UK Based</h3>
                     <p>Edinburgh headquarters with all data remaining on UK soil. No offshore outsourcing.</p>
-                </div>
+                </div> -->
                 <div class="feature-item">
                     <div class="feature-icon">
                         <svg viewBox="0 0 48 48" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -209,7 +209,7 @@
                         </svg>
                     </div>
                     <h3>Compliance Driven</h3>
-                    <p>Deep expertise in UK GDPR, Cyber Essentials, ISO 27001, and sector-specific regulations.</p>
+                    <p>Deep expertise in GDPR, Cyber Essentials, ISO 27001, and sector-specific regulations.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
@@ -236,7 +236,7 @@
                 <article class="case-card">
                     <img src="images/placeholder-fintech.svg" alt="Fintech Security" class="case-image">
                     <div class="case-content">
-                        <h3>Securing a £50M Fintech Launch</h3>
+                        <h3>Securing a Fintech Launch</h3>
                         <p>Complete security infrastructure for a new digital banking platform, achieving FCA compliance
                             in 8 weeks.</p>
                         <a href="case-studies.html" class="case-link">Read case study →</a>
@@ -275,9 +275,9 @@
                         <img src="images/logo.svg" alt="Invara Digital Logo">
                         <span class="logo-text">Invara Digital</span>
                     </a>
-                    <p class="footer-tagline">Enterprise-grade cyber security for UK businesses.</p>
+                    <p class="footer-tagline">Enterprise-grade cyber security for your businesses.</p>
                     <div class="footer-address">
-                        <strong>Headquarters</strong>
+                        <strong>Address</strong>
                         <address>
                             5 South Charlotte Street<br>
                             Edinburgh, EH2 4AN<br>
