--- a/services.html
+++ b/services.html
@@ -341,7 +341,7 @@
                     </a>
                     <p class="footer-tagline">Enterprise-grade cyber security for UK businesses.</p>
                     <div class="footer-address">
-                        <strong>Headquarters</strong>
+                        <strong>Address</strong>
                         <address>
                             5 South Charlotte Street<br>
                             Edinburgh, EH2 4AN<br>
