--- a/case-studies.html
+++ b/case-studies.html
@@ -59,7 +59,7 @@
         <div class="container">
             <span class="section-tag">Success Stories</span>
             <h1>Client Case Studies</h1>
-            <p>Real results from real UK businesses we've helped protect</p>
+            <p>Real results for your businesses we've helped protect</p>
         </div>
     </section>
 
@@ -69,8 +69,8 @@
             <div class="featured-grid">
                 <div class="featured-content">
                     <span class="case-badge large">Fintech</span>
-                    <h2>Securing a £50M Digital Banking Launch</h2>
-                    <p class="lead">A new UK fintech startup needed enterprise-grade security to satisfy FCA
+                    <h2>Securing Your Future</h2>
+                    <p class="lead">A new fintech startup needed enterprise-grade security to satisfy FCA
                         requirements and protect sensitive customer data ahead of their public launch.</p>
 
                     <div class="challenge-solution">
@@ -117,10 +117,10 @@
                                 <span>100%</span>
                                 <small>Compliance</small>
                             </div>
-                            <div class="v-stat">
+                            <!-- <div class="v-stat">
                                 <span>£50M</span>
                                 <small>Protected</small>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -153,9 +153,9 @@
                             Digital compliance.</p>
                         <div class="case-meta">
                             <span>Services: ISO 27001, Penetration Testing</span>
-                            <span>Duration: 10 months</span>
+                            <!-- <span>Duration: 10 months</span> -->
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <!-- <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
 
@@ -163,13 +163,13 @@
                     <img src="images/placeholder-retail.svg" alt="Retail Security" class="case-image">
                     <div class="case-content">
                         <h3>E-commerce Platform Security</h3>
-                        <p>PCI DSS compliance and penetration testing for a £100M+ annual turnover online retailer ahead
+                        <p>PCI DSS compliance and penetration testing for an annual turnover online retailer ahead
                             of Black Friday.</p>
                         <div class="case-meta">
                             <span>Services: PCI DSS, Penetration Testing</span>
-                            <span>Duration: 6 weeks</span>
+                            <!-- <span>Duration: 6 weeks</span> -->
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <!-- <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
 
@@ -181,9 +181,9 @@
                             requirements.</p>
                         <div class="case-meta">
                             <span>Services: Cyber Essentials Plus</span>
-                            <span>Duration: 3 weeks</span>
+                            <!-- <span>Duration: 3 weeks</span>
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
 
@@ -194,9 +194,9 @@
                         <p>Security review of connected manufacturing systems for a precision engineering company.</p>
                         <div class="case-meta">
                             <span>Services: IoT Security, Network Assessment</span>
-                            <span>Duration: 4 weeks</span>
+                            <!-- <span>Duration: 4 weeks</span>
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
 
@@ -208,9 +208,9 @@
                             distribution.</p>
                         <div class="case-meta">
                             <span>Services: Supply Chain Assessment, ISO 27001</span>
-                            <span>Duration: 8 weeks</span>
+                            <!-- <span>Duration: 8 weeks</span>
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
 
@@ -218,13 +218,13 @@
                     <img src="images/placeholder-fintech.svg" alt="Insurance SOC" class="case-image">
                     <div class="case-content">
                         <h3>Insurance Broker 24/7 SOC</h3>
-                        <p>Fully managed security operations centre for a high-street insurance broker with 50+
+                        <p>Fully managed security operations centre for a high-street insurance broker with multiple
                             branches.</p>
                         <div class="case-meta">
                             <span>Services: Managed Security, Incident Response</span>
-                            <span>Duration: Ongoing</span>
+                            <!-- <span>Duration: Ongoing</span>
                         </div>
-                        <a href="#" class="case-link">Read full case study →</a>
+                        <a href="#" class="case-link">Read full case study →</a> -->
                     </div>
                 </article>
             </div>
@@ -288,9 +288,9 @@
                         <img src="images/logo.svg" alt="Invara Digital Logo">
                         <span class="logo-text">Invara Digital</span>
                     </a>
-                    <p class="footer-tagline">Enterprise-grade cyber security for UK businesses.</p>
+                    <p class="footer-tagline">Enterprise-grade cyber security for your businesses.</p>
                     <div class="footer-address">
-                        <strong>Headquarters</strong>
+                        <strong>Address</strong>
                         <address>
                             5 South Charlotte Street<br>
                             Edinburgh, EH2 4AN<br>
