--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                         <div class="contact-method">
                             <div class="method-icon">📍</div>
                             <div class="method-details">
-                                <h4>Visit Our Office</h4>
+                                <h4>Address</h4>
                                 <address>
                                     5 South Charlotte Street<br>
                                     Edinburgh, EH2 4AN<br>
@@ -95,12 +95,12 @@
                         </div>
 
                         <div class="contact-method">
-                            <div class="method-icon">🕐</div>
-                            <div class="method-details">
+                            <div class="method-ico"></div>
+                            <!-- <div class="method-details">
                                 <h4>Office Hours</h4>
                                 <span>Monday - Friday: 9:00 - 17:30</span>
-                                <span>24/7 SOC: Always available</span>
-                            </div>
+                                <span>24/7: Always available</span>
+                            </div> -->
                         </div>
                     </div>
 
@@ -116,9 +116,10 @@
                 <div class="contact-form-wrapper">
                     <div class="form-header">
                         <h3>Send Us a Message</h3>
-                        <p>Fill out the form below and we'll get back to you shortly.</p>
+                        <p>Click the button below to email us directly.</p>
                     </div>
 
+                    <!-- Form commented out as per request
                     <form action="https://formspree.io/f/xgolknlz" method="POST" class="contact-form" id="contactForm">
                         <input type="hidden" name="_subject" value="New Contact Enquiry from Invara Digital">
                         <div class="form-group">
@@ -178,6 +179,18 @@
                             <span class="btn-loader"></span>
                         </button>
                     </form>
+                    -->
+
+                    <div class="direct-contact-container"
+                        style="display: flex; gap: 1rem; justify-content: center; padding: 40px 0; flex-wrap: wrap;">
+                        <a href="mailto:support@invaradigital.co.uk" class="btn btn-primary">
+                            Contact via Email
+                        </a>
+                        <button id="copyEmailBtn" class="btn btn-secondary"
+                            style="background: transparent; border: 1px solid var(--electric-blue); color: var(--electric-blue);">
+                            Copy Email Address
+                        </button>
+                    </div>
 
                     <!-- Alternative Direct Email -->
                     <div class="alternative-contact">
