--- a/resources.html
+++ b/resources.html
@@ -69,8 +69,8 @@
             <div class="resource-hero">
                 <div class="resource-content">
                     <span class="resource-type">Free Guide</span>
-                    <h2>The UK SME Cyber Security Handbook 2026</h2>
-                    <p>Everything UK business owners need to know about protecting their organisation from cyber
+                    <h2>The SME Cyber Security Handbook </h2>
+                    <p>Everything your business owners need to know about protecting their organisation from cyber
                         threats. Includes Cyber Essentials checklist, compliance requirements, and incident response
                         templates.</p>
                     <ul class="resource-features">
@@ -79,16 +79,16 @@
                         <li>✓ Incident response templates</li>
                         <li>✓ Vendor assessment questionnaire</li>
                     </ul>
-                    <p class="resource-availability"><strong>Status:</strong> Updated for 2026 - Available upon request.
-                    </p>
+                    <!-- <p class="resource-availability"><strong>Status:</strong> Updated- Available upon request.
+                    </p> -->
                 </div>
                 <div class="resource-visual">
                     <div class="guide-mockup">
                         <div class="mockup-spine"></div>
                         <div class="mockup-cover">
-                            <span class="mockup-badge">2026 Edition</span>
+                            <span class="mockup-badge">Latest Edition</span>
                             <h3>SME Cyber Security Handbook</h3>
-                            <span class="mockup-author">Invara Digital</span>
+                            <!-- <span class="mockup-author">Invara Digital</span> -->
                         </div>
                     </div>
                 </div>
@@ -117,13 +117,13 @@
                     <img src="images/placeholder-general.svg" alt="Cyber Essentials Guide" class="resource-image">
                     <div class="resource-card-content">
                         <div class="resource-meta">
-                            <span class="resource-date">15 Jan 2026</span>
+                            <!-- <span class="resource-date">15 Jan 2026</span> -->
                             <span class="resource-read">10 min read</span>
                         </div>
                         <h3>Preparing for Cyber Essentials: A Step-by-Step Guide</h3>
                         <p>Everything you need to know to achieve your first Cyber Essentials certification, from
                             initial assessment to final submission.</p>
-                        <p class="resource-status">Full article coming soon.</p>
+                        <!-- <p class="resource-status">Full article coming soon.</p> -->
                     </div>
                 </article>
 
@@ -131,13 +131,13 @@
                     <img src="images/placeholder-general.svg" alt="Threat Landscape" class="resource-image">
                     <div class="resource-card-content">
                         <div class="resource-meta">
-                            <span class="resource-date">10 Jan 2026</span>
+                            <!-- <span class="resource-date">10 Jan 2026</span> -->
                             <span class="resource-read">5 min read</span>
                         </div>
-                        <h3>2026 Cyber Threat Landscape: What UK Businesses Should Know</h3>
-                        <p>Analysis of emerging threats targeting UK SMEs and practical steps to protect your
+                        <h3>Cyber Threat Landscape: What UK Businesses Should Know</h3>
+                        <p>Analysis of emerging threats targeting SMEs and practical steps to protect your
                             organisation.</p>
-                        <p class="resource-status">Full article coming soon.</p>
+                        <!-- <p class="resource-status">Full article coming soon.</p> -->
                     </div>
                 </article>
 
@@ -145,13 +145,13 @@
                     <img src="images/placeholder-general.svg" alt="ISO 27001 Webinar" class="resource-image">
                     <div class="resource-card-content">
                         <div class="resource-meta">
-                            <span class="resource-date">25 Jan 2026</span>
-                            <span class="resource-type">Live Event</span>
+                            <!-- <span class="resource-date">25 Jan 2026</span> -->
+                            <!-- <span class="resource-type">Live Event</span> -->
                         </div>
-                        <h3>ISO 27001:2022 Changes Explained</h3>
+                        <h3>ISO 27001:Changes Explained</h3>
                         <p>Join our consultants as they walk through the key changes in the updated ISO 27001 standard
                             and what they mean for your certification.</p>
-                        <p class="resource-status">Registration closed. Recording available on request.</p>
+                        <!-- <p class="resource-status">Registration closed. Recording available on request.</p> -->
                     </div>
                 </article>
 
@@ -164,7 +164,7 @@
                         <h3>Security Risk Assessment Calculator</h3>
                         <p>Quickly assess your organisation's security risk level with our interactive calculator. Get
                             instant recommendations.</p>
-                        <p class="resource-status">Tool currently under maintenance.</p>
+                        <!-- <p class="resource-status">Tool currently under maintenance.</p> -->
                     </div>
                 </article>
 
@@ -172,13 +172,13 @@
                     <img src="images/placeholder-general.svg" alt="Penetration Testing" class="resource-image">
                     <div class="resource-card-content">
                         <div class="resource-meta">
-                            <span class="resource-date">5 Jan 2026</span>
+                            <!-- <span class="resource-date">5 Jan 2026</span> -->
                             <span class="resource-read">7 min read</span>
                         </div>
                         <h3>Why Your Penetration Test Might Be Worthless</h3>
                         <p>Common pitfalls in penetration testing engagements and how to ensure you get real value from
                             your security investment.</p>
-                        <p class="resource-status">Full article coming soon.</p>
+                        <!-- <p class="resource-status">Full article coming soon.</p> -->
                     </div>
                 </article>
 
@@ -186,13 +186,13 @@
                     <img src="images/placeholder-general.svg" alt="Incident Response" class="resource-image">
                     <div class="resource-card-content">
                         <div class="resource-meta">
-                            <span class="resource-date">20 Dec 2025</span>
+                            <!-- <span class="resource-date">20 Dec 2025</span> -->
                             <span class="resource-read">15 min read</span>
                         </div>
                         <h3>Incident Response Planning for SMEs</h3>
                         <p>A practical guide to creating an incident response plan that actually works when you need it
                             most.</p>
-                        <p class="resource-status">Full article coming soon.</p>
+                        <!-- <p class="resource-status">Full article coming soon.</p> -->
                     </div>
                 </article>
             </div>
@@ -212,9 +212,9 @@
                         <img src="images/logo.svg" alt="Invara Digital Logo">
                         <span class="logo-text">Invara Digital</span>
                     </a>
-                    <p class="footer-tagline">Enterprise-grade cyber security for UK businesses.</p>
+                    <p class="footer-tagline">Enterprise-grade cyber security for your businesses.</p>
                     <div class="footer-address">
-                        <strong>Headquarters</strong>
+                        <strong>Address</strong>
                         <address>
                             5 South Charlotte Street<br>
                             Edinburgh, EH2 4AN<br>
