--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,7 @@
                 </svg>
             </button>
             <ul class="nav-menu" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li class="dropdown">
                     <a href="services.html" class="nav-link">Services</a>
@@ -47,7 +48,7 @@
                         <li><a href="services.html#managed">Managed Security</a></li>
                     </ul>
                 </li>
-                <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
+                <!-- <li><a href="case-studies.html" class="nav-link">Case Studies</a></li> -->
                 <li><a href="resources.html" class="nav-link active">Resources</a></li>
                 <li><a href="contact.html" class="nav-link nav-cta">Contact</a></li>
             </ul>
@@ -235,8 +236,9 @@
                 <div class="footer-links">
                     <h4>Company</h4>
                     <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="case-studies.html">Case Studies</a></li>
+                        <!-- <li><a href="case-studies.html">Case Studies</a></li> -->
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
