--- a/about.html
+++ b/about.html
@@ -24,19 +24,20 @@
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
                 <!-- Menu Icon (Visible by default) -->
-                <svg class="nav-icon menu-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
-                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="nav-icon menu-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor"
+                    stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="3" y1="12" x2="21" y2="12"></line>
                     <line x1="3" y1="6" x2="21" y2="6"></line>
                     <line x1="3" y1="18" x2="21" y2="18"></line>
                 </svg>
-                <svg class="nav-icon close-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
-                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="nav-icon close-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor"
+                    stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="18" y1="6" x2="6" y2="18"></line>
                     <line x1="6" y1="6" x2="18" y2="18"></line>
                 </svg>
-                </button>
+            </button>
             <ul class="nav-menu" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link active">About</a></li>
                 <li class="dropdown">
                     <a href="services.html" class="nav-link">Services</a>
@@ -48,7 +49,7 @@
                         <li><a href="services.html#managed">Managed Security</a></li>
                     </ul>
                 </li>
-                <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
+                <!-- <li><a href="case-studies.html" class="nav-link">Case Studies</a></li> -->
                 <li><a href="resources.html" class="nav-link">Resources</a></li>
                 <li><a href="contact.html" class="nav-link nav-cta">Contact</a></li>
             </ul>
@@ -70,7 +71,7 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h2>Our Story</h2>
-                    <p>Invara Digital was founded  by a team of former Big Four security consultants who
+                    <p>Invara Digital was founded by a team of former Big Four security consultants who
                         recognised that UK SMEs and mid-market companies were underserved by the cyber security
                         industry. Too often, these businesses were forced to choose between expensive enterprise
                         solutions or inadequate consumer-grade protection.</p>
@@ -240,8 +241,9 @@
                 <div class="footer-links">
                     <h4>Company</h4>
                     <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="case-studies.html">Case Studies</a></li>
+                        <!-- <li><a href="case-studies.html">Case Studies</a></li> -->
                         <li><a href="resources.html">Resources</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
