--- a/terms.html
+++ b/terms.html
@@ -30,6 +30,9 @@
                     <line x1="6" y1="6" x2="18" y2="18"></line>
                 </svg>
             </button>
+            <ul class="nav-menu" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+            </ul>
         </div>
     </nav>
     <section class="page-header">
