--- a/about.html
+++ b/about.html
@@ -78,9 +78,9 @@
                     <p>We set out to bridge this gap, offering enterprise-grade security services tailored to the
                         specific needs and budgets of growing UK businesses. Based in Edinburgh, we maintain a strict
                         UK-only policy—all our operations, data storage, and staff remain on British soil.</p>
-                    <p>Today, we protect over 500 UK businesses, from fintech startups to established healthcare
+                    <!-- <p>Today, we protect over 500 UK businesses, from fintech startups to established healthcare
                         providers, helping them navigate an increasingly complex threat landscape while maintaining
-                        compliance with UK and international regulations.</p>
+                        compliance with UK and international regulations.</p> -->
                 </div>
                 <div class="about-stats">
                     <!-- <div class="stat-box">
@@ -91,10 +91,10 @@
                         <span class="stat-number">25+</span>
                         <span class="stat-label">Security Experts</span>
                     </div>
-                    <div class="stat-box">
+                    <!-- <div class="stat-box">
                         <span class="stat-number">500+</span>
                         <span class="stat-label">Clients Protected</span>
-                    </div>
+                    </div> -->
                     <div class="stat-box">
                         <span class="stat-number">98%</span>
                         <span class="stat-label">Retention Rate</span>
